After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692971 - x11/device-manager-xi2: Fix slave to master association
x11/device-manager-xi2: Fix slave to master association
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: x11
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
: 693315 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-01-31 22:21 UTC by Rui Matos
Modified: 2013-02-07 12:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
x11/device-manager-xi2: Fix slave to master association (1.18 KB, patch)
2013-01-31 22:21 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2013-01-31 22:21:35 UTC
Apparently either a thinko or copy&pasto.
Comment 1 Rui Matos 2013-01-31 22:21:37 UTC
Created attachment 234939 [details] [review]
x11/device-manager-xi2: Fix slave to master association

A slave is associated to a master device, not the other way around.
Comment 2 Emmanuele Bassi (:ebassi) 2013-02-01 03:43:23 UTC
Review of attachment 234939 [details] [review]:

looks good
Comment 3 Rui Matos 2013-02-01 09:22:12 UTC
Pushed to both master and clutter-1.14

Attachment 234939 [details] pushed as 83f2f03 - x11/device-manager-xi2: Fix slave to master association
Comment 4 Rui Matos 2013-02-07 12:15:36 UTC
*** Bug 693315 has been marked as a duplicate of this bug. ***