x11/device-manager-xi2: Fix slave to master association

A slave is associated to a master device, not the other way around.

https://bugzilla.gnome.org/show_bug.cgi?id=692971