clutter/x11/clutter-device-manager-xi2.c
@@ -1345,8 +1345,8 @@ relate_slaves (gpointer key,
   ClutterDeviceManagerXI2 *manager_xi2 = data;
   ClutterInputDevice *master, *slave;
 
-  master = g_hash_table_lookup (manager_xi2->devices_by_id, key);
-  slave = g_hash_table_lookup (manager_xi2->devices_by_id, value);
+  slave = g_hash_table_lookup (manager_xi2->devices_by_id, key);
+  master = g_hash_table_lookup (manager_xi2->devices_by_id, value);
 
   _clutter_input_device_set_associated_device (slave, master);
   _clutter_input_device_add_slave (master, slave);
